spacing fixed

--- a/public/wp-content/themes/atomic-design/assets/css/base.css
+++ b/public/wp-content/themes/atomic-design/assets/css/base.css
@@ -75,7 +75,7 @@ h3 {
 }
 
 p {
-    font-size: var(--p);
+    font-size: var(--body);
     line-height: 1.5;
     font-weight: 300;
 }
